[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://script.gd" type="Script" id=2]

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.231373, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 57.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 150.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
size_flags_stretch_ratio = 0.1
text = "Directory:"

[node name="DirectoryLine" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 921.0
margin_bottom = 57.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialogButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 926.0
margin_right = 965.0
margin_bottom = 57.0
hint_tooltip = "Open file explorer"
text = "..."

[node name="RecursiveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 970.0
margin_right = 1004.0
margin_bottom = 57.0
hint_tooltip = "Search recursively (through sub-folders)
Blue = ON
White = OFF "
toggle_mode = true
pressed = true
text = "R"

[node name="Spacer5" type="Control" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 1004.0
margin_bottom = 76.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 1004.0
margin_bottom = 138.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_top = 2.0
margin_right = 150.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
size_flags_stretch_ratio = 0.1
text = "Formats:"

[node name="FormatsLine" type="LineEdit" parent="VBoxContainer/HBoxContainer4"]
margin_left = 155.0
margin_right = 1004.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "gd"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 1004.0
margin_bottom = 157.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 1004.0
margin_bottom = 219.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 2.0
margin_right = 150.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
size_flags_stretch_ratio = 0.1
text = "Search:"

[node name="SearchLine" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 155.0
margin_right = 1004.0
margin_bottom = 57.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Control" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 1004.0
margin_bottom = 238.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 243.0
margin_right = 1004.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 2.0
margin_right = 150.0
margin_bottom = 54.0
rect_min_size = Vector2( 150, 0 )
size_flags_stretch_ratio = 0.1
text = "Replace:"

[node name="ReplaceLine" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
margin_left = 155.0
margin_right = 1004.0
margin_bottom = 57.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="VBoxContainer"]
margin_top = 305.0
margin_right = 1004.0
margin_bottom = 319.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplaceButton" type="Button" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 1004.0
margin_bottom = 438.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Replace"

[node name="Spacer4" type="Control" parent="VBoxContainer"]
margin_top = 443.0
margin_right = 1004.0
margin_bottom = 457.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="Button" parent="VBoxContainer"]
margin_top = 462.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Undo"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 87.5 )
popup_exclusive = true
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
show_hidden_files = true
current_dir = "/Users/mtp/Documents/SearchAndReplaceDirectory"
current_path = "/Users/mtp/Documents/SearchAndReplaceDirectory/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/DirectoryLine" to="." method="_on_DirectoryLine_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FileDialogButton" to="FileDialog" method="popup_centered_clamped" binds= [ Vector2( 5000, 5000 ), 0.95 ]]
[connection signal="pressed" from="VBoxContainer/ReplaceButton" to="." method="_on_ReplaceButton_pressed"]
[connection signal="pressed" from="VBoxContainer/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
